force-app/main/default/objects/SyncServiceSettings__c/SyncServiceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SyncServiceSettings</label>
</CustomObject>