force-app/main/default/objects/SyncServiceSettings__c/fields/DisableSync__c.field-meta.xml
<CustomField>
    <fullName>DisableSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Sync</label>
    <type>Checkbox</type>
</CustomField>