force-app/main/default/objects/SyncServiceSettings__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Stores API Name of Named Credential with appended path to the endpoint for the service.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>