force-app/main/default/objects/SyncServiceSettings__c/fields/ForceStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ForceStatusCode__c</fullName>
    <description>Used for Response Status Code manual setup - it has no consequence wit the service run - it will always end with this status (direction TO SF ONLY)</description>
    <inlineHelpText>Used for Response Status Code manual setup - it has no consequence wit the service run - it will always end with this status (direction TO SF ONLY)</inlineHelpText>
    <label>Force Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>