force-app/main/default/objects/SyncServiceSettings__c/fields/IsLogRequest__c.field-meta.xml
<CustomField>
    <fullName>IsLogRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Request</label>
    <type>Checkbox</type>
</CustomField>