force-app/main/default/objects/SyncServiceSettings__c/fields/SiteUserName__c.field-meta.xml
<CustomField>
    <fullName>SiteUserName__c</fullName>
    <description>The user (UserName) who&apos;s action is excluded from triggering Sync to SAP</description>
    <inlineHelpText>The user (UserName) who&apos;s action is excluded from triggering Sync to SAP</inlineHelpText>
    <label>Site User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>